applications/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
        - name: minecraft
          image: ghcr.io/itzg/minecraft-server:java25
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: minecraft-storage
              mountPath: /data
      volumes:
        - name: minecraft-storage
          persistentVolumeClaim:
            claimName: minecraft-data
