applications/minecraft/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-nodeport
  namespace: minecraft
spec:
  type: NodePort
  selector:
    app: minecraft
  ports:
    - port: 25565
      targetPort: 25565
      nodePort: 32565
      protocol: TCP
