applications/minecraft/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: minecraft
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "minecraft.erikak.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minecraft
          port: 8080
