applications/minecraft/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: minecraft
  namespace: minecraft
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "minecraft.erikak.no"
  rules:
    - backendRefs:
        - name: minecraft
          port: 25565
